# netforge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  package-lock.json  package.json
.github/workflows/: ci.yml  opencode.yml  release.yml
docs/: BUILD.md  ui-design-spec.md
src/: AGENTS.md  cli.rs  config.rs  error.rs  events.rs  lib.rs  main.rs  state.rs  tauri_commands.rs
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tauri_commands.rs  tauri_commands.rs.tmp2
src-ui/: AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json
src-ui/src/: App.css  App.tsx  index.css  types.ts
src-ui/src/components/: ChatPanel.css  ChatPanel.tsx  ClientTab.tsx  ConfigPanel.css  ConfigPanel.tsx  ConnectionList.css  ConnectionList.tsx  DataPanel.css  DataPanel.tsx  EmptyState.css  EmptyState.tsx  Footer.tsx  Header.tsx  InstanceCard.css  InstanceCard.tsx  Layout.css  Layout.tsx  LogPanel.css  LogPanel.tsx  ProxyPanel.css  ProxyPanel.tsx  ProxyTab.css  ProxyTab.tsx  ServerTab.tsx  Sidebar.tsx  Skeleton.css  Skeleton.tsx  TabBar.css  TabBar.tsx  UdpTab.tsx  WsClientTab.tsx  WsServerTab.tsx
src-ui/src/components/ui/: Badge.tsx  Button.tsx  ConnectionCard.tsx  Dialog.tsx  Dropdown.tsx  FilterInput.tsx  FormatTabs.tsx  Input.tsx  MessageDirection.tsx  NavItem.tsx  Panel.tsx  PauseButton.tsx  Switch.tsx  Tab.tsx  Toast.tsx  index.ts
src-ui/src/hooks/: useProxy.ts  useShortcuts.ts  useSocket.ts  useTheme.ts  useUdp.ts  useWebSocket.ts
src-ui/src/utils/: filter.ts  storage.ts
src/proxy/: mod.rs  tcp.rs  tls.rs  utils.rs
src/socket/: client.rs  format.rs  mod.rs  server.rs
src/udp/: mod.rs  socket.rs
src/ws/: client.rs  mod.rs  server.rs
