[package]
name = "netforge"
version = "0.1.0"
edition = "2021"
description = "Network tools: TCP proxy and socket debugger"
license = "MIT"

[lib]
name = "netforge"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
rustls-pemfile = "2"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.clippy]
all = { level = "deny", priority = -1 }
cast_precision_loss = "warn"
cast_lossless = "warn"