[package]
name = "netforge-gui"
version = "0.1.0"
description = "NetForge GUI Application"
authors = ["NetForge Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 依赖 CLI 后端
netforge = { path = ".." }

# 异步运行时（与 CLI 同步）
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tauri-plugin-store = "2.4.2"
